--- a/api/composer.json
+++ b/api/composer.json
@@ -10,7 +10,8 @@
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
-        "symfony/yaml": "^4.0"
+        "symfony/yaml": "^4.0",
+        "webonyx/graphql-php": "^0.12.5"
     },
     "require-dev": {
         "api-platform/schema-generator": "^2.1",
